--- a/src/app/components/farmer-distribution/farmer-distribution.component.html
+++ b/src/app/components/farmer-distribution/farmer-distribution.component.html
@@ -7,7 +7,7 @@
 			[options]="chartOptions"
 			[callbackFunction]="chartCallback"
 			[(update)]=updateFromInput
-			[oneToOne]="true"
+			(oneToOne)="true"
 		 	class="map-style">
 		</highcharts-chart>
 	</div>
